# uxguard-portfolio

./: .gitignore  README.md  start.sh
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: auth.py  case_studies.py  feed.py  media.py  portfolio.py  router.py  users.py
backend/app/core/: security.py
backend/app/db/: bootstrap.py  models.py  session.py
backend/app/schemas/: domain.py
backend/scripts/: seed.py
docs/: BILLING.md  DEPLOYMENT.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts  vite.local-api.ts
frontend/api/: health.js
frontend/api/_lib/: admin-employers.js  admin-users.js  analytics.js  assistant.js  auth.js  community.js  contact-store.js  demo-data.js  http.js  like-utils.js  mail.js  media.js  multipart.js  password-reset.js  passwords.js  portfolio-config.js  projects.js  roles.js  store.js  withApi.js  workspace-portal.js
frontend/api/ai/: credits.js  generate.js
frontend/api/og/: case-study.js
frontend/api/v1/: case-studies.js  comments.js  contact-messages.js  contact.js  likes.js  portfolio-builder.js  projects.js  search.js
frontend/scripts/: testlab-worker.mjs
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/context/: AssistantContext.tsx  AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: usePeerCall.ts
frontend/src/lib/: aiAssistants.ts  analytics.ts  assistantPrompts.ts  caseStudyStore.ts  compressChatImage.ts  contact.ts  (+9 more)
infrastructure/: render.yaml
scripts/: deploy-vercel.sh
(+281 files in other folders)
